src/widgets/Menu/menu.module.css
.wrapper {
	position: fixed;
	top: 0;
	left: -100%;
	width: 100%;
	height: 100%;
	z-index: 10000;
	visibility: hidden;
	opacity: 0;
	transition: all 0.66s;
	display: flex;
	flex-direction: row;
}

.active {
	visibility: visible;
	opacity: 1;
	left: 0;
}

.menu {
	position: relative;
	max-width: 345px;
	width: 100%;
	background-color: var(--dark-pink-color);
	height: 100%;
	padding-top: 140px;
	padding-left: 40px;
	padding-right: 5px;
	transition: all 0.66s;
	z-index: 10000;
}

.close {
	position: absolute;
	top: 25px;
	right: 10px;
}

.list {
	list-style-type: none;
	padding-left: 35px;
}

.list .link {
	position: relative;
	font-size: 24px;
	font-weight: 700;
	margin-bottom: 18px;
}

.list a {
	color: var(--white-color);
	text-decoration: none;
}

.list a::before {
	content: "";
	position: absolute;
	left: -25px;
	top: 50%;
	transform: translateY(-50%);
	width: 15px;
	height: 15px;
	border-radius: 100%;
	border: 1px solid var(--white-color);
	transition: all 0.66s;
}

.list a:hover::before {
	background-color: var(--pink-color);
}

.social {
	width: 220px;
	bottom: 180px;
	left: 40px;
	display: flex;
	justify-content: space-between;
	align-items: center;
	gap: 10px;
}

.main {
	height: calc(100vh - 180px);
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: flex-start;
}

.footer {
	display: flex;
	flex-direction: column;
	gap: 12px;
}

.overlay {
	z-index: 500;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: var(--white-color);
	opacity: 0.7;
}

@media screen and (width <= 575px) {
	.menu {
		max-width: 250px;
		padding-left: 20px;
	}

	.social {
		width: 150px;
		display: flex;
		justify-content: space-between;
		align-items: center;
		gap: 5px;
		flex-wrap: wrap;
	}
}

